--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,13 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    animation:fadeIn .4s linear;
+}
+
+    @keyframes fadeIn{
+      0%{
+        transform: scale(1.5);
+      }  
 }
 
 .container .slide-container .slide .content{
@@ -36,4 +43,77 @@
     flex-flow: column;
     background: rgba(0, 0, 0, 0.7);
     text-align: center;
+}
+
+.container .slide-container .slide .content h3{
+    font-size: 60px;
+    color: #fff;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    animation:animate .4s linear .4s backwards;
+}
+
+.container .slide-container .slide .content p{
+    font-size: 15px;
+    color: #eee;    
+    padding: 5px 0;
+    font-weight: lighter;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    max-width: 700px;
+    animation:animate .4s linear .6s backwards;
+}
+
+.container .slide-container .slide .content .btn{
+    display: inline-block;
+    padding: 9px 30px;
+    background: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    color: #333;
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 10px;
+    transition: .2s linear;
+    animation:animate .4s linear 1s backwards;
+}
+
+.container .slide-container .slide .content .btn:hover{
+    letter-spacing: 2px;
+}
+
+@keyframes animate{
+    0%{
+      opacity: 0;
+      transform:scale(0.5) translateY(-50px);
+    }
+}
+
+.container .slide-container{
+    display: none;
+}
+
+.container .slide-container.active{
+    display: block;
+}
+
+.container #next,
+.container #prev{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-350%);
+    z-index: 100;
+    background: #fff;
+    color: #333;
+    font-weight: bold;
+    height: 60px;
+    width: 50px;
+    line-height: 55px;
+    font-size: 30px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.container #next{
+    right: 0;
+}
+.container #prev{
+    left: 0;
 }
